--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "twilio/sdk": "^7.16",
         "tymon/jwt-auth": "^2.0",
         "yajra/laravel-datatables-buttons": "^10",
-        "yajra/laravel-datatables-oracle": "^10.0"
+        "yajra/laravel-datatables-oracle": "~10.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
